Register metric
